--- a/PLC_Service/plc.service
+++ b/PLC_Service/plc.service
@@ -4,11 +4,13 @@ After=redis.service
 
 [Service]
 Type=simple
-Restart=always
+Restart=on-failure
 RestartSec=1
 User=pi
 WorkingDirectory=/home/pi/dev/SD_Controller/PLC_Service/
 ExecStart=/usr/bin/python3 /home/pi/dev/SD_Controller/PLC_Service/main.py
+StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
