--- a/Database_Service/database.service
+++ b/Database_Service/database.service
@@ -4,10 +4,16 @@ After=redis.service
 
 [Service]
 Type=simple
-Restart=always
+
+Restart=on-failure
+
 RestartSec=1
 User=pi
-ExecStart=
+WorkingDirectory=/home/pi/dev/SD_Controller/Database_Service/build/
+ExecStart=/home/pi/dev/SD_Controller/Database_Service/build/database_service
+
+StandardOutput=journal+console
+StandardError=journal+console
 
 [Install]
 WantedBy=multi-usr.target
